<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="50dp">

            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom">
                <com.mfh.comna.view.img.FineImgView
                    android:layout_width="48dp"
                    android:layout_height="48dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/member_field_name1"
                    android:layout_marginLeft="10dp"/>
                </LinearLayout>

            <TextView
                android:text="@string/member_field_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:textColor="#999999"/>

            <Spinner
                android:id="@+id/member_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

            <TextView
                android:text="@string/member_field_name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="#999999"/>

            <Spinner
                android:id="@+id/member_xq_spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/member_field_name4"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/member_field_name5"
                android:layout_marginTop="20dp"/>

            </LinearLayout>
        </ScrollView>

</FrameLayout>