<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#f3f3f3" android:orientation="vertical">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/ChatMaterialItemStyle"
            android:id="@+id/chat_material_cyy">
            <ImageView style="@style/ChatMaterialBtnStyle"
                android:src="@drawable/chat_material_1"
                android:contentDescription=""/>
            <TextView style="@style/ChatMaterialTxtStyle"
                android:text="@string/chat_material_lbl1"/>
        </LinearLayout>

        <LinearLayout style="@style/ChatMaterialItemStyle"
            android:id="@+id/chat_material_tp">
            <ImageView style="@style/ChatMaterialBtnStyle"
                android:src="@drawable/chat_material_2"
                android:contentDescription=""/>
            <TextView style="@style/ChatMaterialTxtStyle"
                android:text="@string/chat_material_lbl2"/>
        </LinearLayout>

        <LinearLayout style="@style/ChatMaterialItemStyle"
            android:id="@+id/chat_material_tw">
            <ImageView style="@style/ChatMaterialBtnStyle"
                android:src="@drawable/chat_material_3"
                android:contentDescription=""/>
            <TextView style="@style/ChatMaterialTxtStyle"
                android:text="@string/chat_material_lbl3"/>
        </LinearLayout>

        <LinearLayout style="@style/ChatMaterialItemStyle"
            android:id="@+id/chat_material_mp">
            <ImageView style="@style/ChatMaterialBtnStyle"
                android:src="@drawable/chat_material_4"
                android:focusable="true"
                android:contentDescription=""/>
            <TextView style="@style/ChatMaterialTxtStyle"
                android:text="@string/chat_material_lbl4"/>
        </LinearLayout>

        </LinearLayout>

</LinearLayout>