<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!--<ImageView-->
        <!--android:id="@+id/image"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:background="@drawable/"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:contentDescription="" />-->
    
    <TextView 
        android:id="@+id/phone_number"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/phone_time"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_below="@id/phone_number"
        android:layout_marginTop="50dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_margin="20dp" >

        <Button
            android:id="@+id/recieve"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/netphone_recieve"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/refuse"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/netphone_refuse"
            android:layout_toRightOf="@id/recieve"
            android:layout_margin="5dp"/>
        
        <Button 
            android:id="@+id/release"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/netphone_release"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>
    </RelativeLayout>

</RelativeLayout>